--- a/qdrant-landing/themes/qdrant-2024/assets/css/components/_lang-switcher.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/components/_lang-switcher.scss
@@ -20,6 +20,10 @@ $tabs-font-color-hover: $neutral-90;
     position: relative;
     overflow-x: scroll;
     overflow-y: hidden;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__overlay {
