--- a/qdrant-landing/themes/qdrant/layouts/partials/top-banner.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/top-banner.html
@@ -1,7 +1,7 @@
 {{ $classes := .classes }}
 {{ with (.context.Site.GetPage "/headless/top-banner") }}
 <section class="top-banner{{if $classes}} {{ $classes }}{{end}}">
-    <div class="d-flex flex-wrap align-items-center justify-content-between">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <span class="top-banner__icon"> {{ .Params.icon | safeHTML }} </span>
         <span class="top-banner__text"> {{ .Params.text }}
         </span>
