Code snippets for articles, blog, docs (#847)
* code highlight

* import highlight scss

* code copy button and highlight styles

* fix highlight

* code snippet tabs

* changes in lang switcher

* changes to fix mobile view

* no scrollbar

--- a/qdrant-landing/themes/qdrant-2024/assets/css/_components.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_components.scss
@@ -3,3 +3,5 @@
 @import 'components/card';
 @import 'components/post';
 @import 'components/utilites';
+@import 'components/copy-btn';
+@import 'components/lang-switcher';
