--- a/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
@@ -2,6 +2,7 @@
 @import 'satoshi-font';
 @import 'bootstrap-custom';
 
+@import 'syntax-highlight';
 @import 'components';
 @import 'partials/logo';
 @import 'partials/top-banner';
