--- a/qdrant-landing/themes/qdrant-2024/assets/css/_components.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_components.scss
@@ -1,6 +1,7 @@
 @import 'components/main-header';
 @import 'components/buttons';
 @import 'components/card';
+@import 'components/input';
 @import 'components/post';
 @import 'components/utilites';
 @import 'components/copy-btn';
