--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/newsletter.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/newsletter.html
@@ -8,7 +8,7 @@
         </div>
         <form class="newsletter__form">
           <input
-            class="input input_md input_dark-bg"
+            class="q-input q-input_md q-input_dark-bg"
             type="email"
             name="email"
             value=""
