--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
@@ -5,7 +5,7 @@
       <form class="qdrant-blog-features__form col-12 col-xl-6">
         <div class="qdrant-blog-features__form-search-block">
           <input
-            class="input input_md input_light-bg"
+            class="q-input q-input_md q-input_light-bg"
             type="text"
             name="search"
             value=""
