--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-hero.html
@@ -6,7 +6,7 @@
         <p class="qdrant-blog-hero__description">{{ .Params.description }}</p>
         <form class="qdrant-blog-hero__form">
           <input
-            class="input input_lg input_dark-bg"
+            class="q-input q-input_lg q-input_dark-bg"
             type="email"
             name="email"
             value=""
