--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-posts.html
@@ -1,9 +1,17 @@
 <section class="qdrant-articles-posts">
   <div class="container">
     <div class="qdrant-articles-posts__articles row gx-4 gy-5 gy-xl-6">
-      {{ range first 10 .Pages }}
+      {{ $all := ($.Site.GetPage "articles" .Section).Pages.ByPublishDate.Reverse }}
+      {{ $paginator := .Paginate (where $all ".Params.featured" "!=" true) 10 }}
+      {{ range $paginator.Pages}}
+      {{ .Scratch.Set "scope" "list" }}
+
+      {{ $link := .Permalink }}
+      {{ if .Params.external_link }}
+      {{ $link = .Params.external_link }}
+      {{ end }}
         <article class="col-12 col-xl-6 post">
-          <a class="post-link" href="/">
+          <a class="post-link" href="{{ .RelPermalink }}">
             <div class="post-preview">
               <img src="{{ .Params.preview_dir }}/preview.jpg" alt="Preview" />
             </div>
@@ -21,7 +29,9 @@
 
     <div class="row">
       <div class="qdrant-articles-posts__pagination col-12">
-        {{ partial "pagination" . }}
+        {{ if gt $paginator.TotalPages 1}}
+        {{ partial "pagination" $paginator }}
+        {{ end }}
       </div>
     </div>
   </div>
