--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
@@ -1,12 +1,25 @@
 <section class="qdrant-blog-posts">
   <div class="container">
     <div class="qdrant-blog-posts__articles row gx-5">
-      {{ range first 9 .Pages }}
+      {{ $all := ($.Site.GetPage "blog" .Section).Pages.ByPublishDate.Reverse }}
+      {{ $paginator := .Paginate (where $all ".Params.featured" "!=" true) 9 }}
+      {{ range $paginator.Pages}}
+      {{ .Scratch.Set "scope" "list" }}
+
+      {{ $link := .Permalink }}
+      {{ if .Params.external_link }}
+      {{ $link = .Params.external_link }}
+      {{ end }}
+
+      {{ if or (not .Params.featured) }}
+
         <article class="qdrant-blog-posts__article post col-12 col-xl-4">
-          <a class="post-link" href="/">
+          <a class="post-link" href="{{ .RelPermalink }}">
+            {{ if .Params.preview_image }}
             <div class="post-preview">
               <img src="{{ .Params.preview_image }}" alt="Preview" />
             </div>
+            {{ end }}
             <h6 class="post-title">{{ .Params.title }}</h6>
             <p class="post-description">{{ .Params.description }}</p>
             <div class="post-about">
@@ -17,12 +30,16 @@
           </a>
         </article>
       {{ end }}
+    {{ end }}
     </div>
 
     <div class="row">
       <div class="qdrant-blog-posts__pagination col-12">
-        {{ partial "pagination" . }}
+        {{ if gt $paginator.TotalPages 1}}
+        {{ partial "pagination" $paginator }}
+        {{ end }}
       </div>
     </div>
+
   </div>
 </section>
