--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
@@ -25,7 +25,7 @@
         <article class="qdrant-blog-features__articles-main post">
           <a class="post-link" href="{{ .RelPermalink }}">
             <div class="post-preview">
-              <img src="{{ .Params.preview_image }}" alt="Preview" />
+              {{ partial "preview-image" (dict "context" . "default_file_name" "title.jpg" "preview_file" .Params.title_preview_image) }}
             </div>
             <h5 class="post-title">{{ .Params.title }}</h5>
             <div class="post-about">
