--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/css.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/css.html
@@ -1,8 +1,5 @@
 {{ $opts := dict "transpiler" "dartsass" "includePaths" (slice "node_modules") }}
 
-{{ if .IsHome }}
-{{ end }}
-
 {{ if eq .Section "hybrid-cloud" }}
   {{ with resources.Get
     (printf "css/%s.scss" .Section) | toCSS $opts | minify | fingerprint
@@ -15,20 +12,16 @@
   }}
     <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" />
   {{ end }}
-
-  {{ with resources.Get
-    "css/main.scss" | toCSS $opts | minify | fingerprint
-  }}
-    <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" />
-  {{ end }}
-  {{ $pageSearchCss := resources.Get "css/search/search.scss" | toCSS $opts | minify | resources.Fingerprint
-    "sha512"
-  }}
-  <link href="{{ $pageSearchCss.RelPermalink }}" rel="stylesheet" integrity="{{ $pageSearchCss.Data.Integrity }}" />
 {{ end }}
 
 {{ if .IsHome }}
   <!--splide.js carousel core styles-->
   {{ $splideCss := resources.Get "css/vendor/splide.scss" | toCSS $opts | minify | resources.Fingerprint "sha512" }}
   <link href="{{ $splideCss.RelPermalink }}" rel="stylesheet" integrity="{{ $splideCss.Data.Integrity }}" />
+{{ end }}
+
+<!--todo: fix for paginator-->
+{{ if in (slice "blog" "documentation") .Section }}
+  {{ $pageSearchCss := resources.Get "css/search/search.scss" | toCSS $opts | minify | resources.Fingerprint "sha512" }}
+  <link href="{{ $pageSearchCss.RelPermalink }}" rel="stylesheet" integrity="{{ $pageSearchCss.Data.Integrity }}" />
 {{ end }}
