--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-features.scss
@@ -22,7 +22,8 @@
     &-search-block {
       position: relative;
 
-      input, .qdr-search-input-btn {
+      input,
+      .qdr-search-input-btn {
         padding-right: $spacer * 2.5;
       }
       .qdr-search-input-btn {
