--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
@@ -4,7 +4,11 @@
       <h2 class="qdrant-blog-features__title col-12 col-xl-6">{{ .Params.features_title }}</h2>
       <form class="qdrant-blog-features__form col-12 col-xl-6">
         <div class="qdrant-blog-features__form-search-block">
-          <button type="button" class="q-input q-input_md q-input_light-bg qdr-search-input-btn" data-target="#searchModal">
+          <button
+            type="button"
+            class="q-input q-input_md q-input_light-bg qdr-search-input-btn"
+            data-target="#searchModal"
+          >
             {{ .Params.search_placeholder }}
             <i></i>
           </button>
@@ -13,6 +17,7 @@
     </div>
 
     {{ $all := ($.Site.GetPage "blog" .Section).Pages.ByPublishDate.Reverse }}
+
 
     <div class="qdrant-blog-features__articles">
       {{ range first 1 (where $all ".Params.featured" "=" true) }}
@@ -30,6 +35,7 @@
           </a>
         </article>
       {{ end }}
+
 
       <div class="qdrant-blog-features__articles-secondary">
         {{ range first 3 (after 1 (where $all ".Params.featured" "=" true)) }}
