--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-hero.scss
@@ -22,12 +22,15 @@
   }
 
   &__form {
-    display: flex;
-    flex-direction: column;
-    gap: $spacer * 0.5;
-    margin-bottom: 0;
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: $spacer * 0.5;
+      margin-bottom: 0;
+    }
 
-    button {
+    button,
+    input[type='submit'] {
       width: 100%;
     }
   }
@@ -45,7 +48,7 @@
     z-index: -1;
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 5;
     padding-bottom: $spacer * 7.5;
 
@@ -55,9 +58,12 @@
     }
 
     &__form {
-      flex-direction: row;
+      form {
+        flex-direction: row;
+      }
 
-      button {
+      button,
+      input[type='submit'] {
         width: $spacer * 10;
       }
     }
