--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_subscribe-form.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_subscribe-form.scss
@@ -9,7 +9,7 @@
     width: 100%;
     position: relative;
     @include media-breakpoint-up(lg) {
-      width: unset;
+      max-width: rem(414);
     }
 
     & > label {
@@ -19,25 +19,26 @@
     .input {
       padding: 0;
       border: 0;
+      width: 100%;
 
       input {
         width: 100%;
-        @include media-breakpoint-up(lg) {
-          width: rem(414);
-        }
       }
     }
   }
+  input[type='submit'] {
+    max-height: rem(41);
+  }
 
   .hs-error-msgs {
-    $hs-error-msgs-top-offset: rem(40);
+    $hs-error-msgs-top-offset: rem(30);
     @include media-breakpoint-up(lg) {
       position: absolute;
       bottom: calc(#{$hs-error-msgs-top-offset} * -1);
 
       @for $i from 1 through 10 {
         &:nth-of-type(#{$i}) {
-          bottom: calc((#{$hs-error-msgs-top-offset} + #{$i - 1} * rem(40)) * -1);
+          bottom: calc((#{$hs-error-msgs-top-offset} + #{$i - 1} * rem(20)) * -1);
         }
       }
     }
