Article and blog pages update (#850)
* returned input

* articles, blog pages: a link to post, pagination

* format

* a form in blog hero

* subscribe banner, fixes for hubspot styles

* overall fixes, links

* page-search

* format

* mobile fixes

* fix search modal and pagination

* removed todos comments

---------

Co-authored-by: generall <andrey@vasnetsov.com>

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-features.scss
@@ -22,11 +22,16 @@
     &-search-block {
       position: relative;
 
-      input {
+      input,
+      .qdr-search-input-btn {
         padding-right: $spacer * 2.5;
       }
+      .qdr-search-input-btn {
+        width: 100%;
+        color: $neutral-70;
+      }
 
-      button {
+      i {
         position: absolute;
         top: rem(12);
         right: $spacer;
