--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
@@ -4,15 +4,14 @@
       <h2 class="qdrant-blog-features__title col-12 col-xl-6">{{ .Params.features_title }}</h2>
       <form class="qdrant-blog-features__form col-12 col-xl-6">
         <div class="qdrant-blog-features__form-search-block">
-          <input
-            class="input input_md input_light-bg"
-            type="text"
-            name="search"
-            value=""
-            placeholder="{{ .Params.search_placeholder }}"
-            required=""
-          />
-          <button class="qdrant-blog-features__form-button" type="submit"></button>
+          <button
+            type="button"
+            class="q-input q-input_md q-input_light-bg qdr-search-input-btn"
+            data-target="#searchModal"
+          >
+            {{ .Params.search_placeholder }}
+            <i></i>
+          </button>
         </div>
       </form>
     </div>
@@ -23,9 +22,9 @@
     <div class="qdrant-blog-features__articles">
       {{ range first 1 (where $all ".Params.featured" "=" true) }}
         <article class="qdrant-blog-features__articles-main post">
-          <a class="post-link" href="/">
+          <a class="post-link" href="{{ .RelPermalink }}">
             <div class="post-preview">
-              <img src="{{ .Params.preview_image }}" alt="Preview" />
+              {{ partial "preview-image" (dict "context" . "default_file_name" "title.jpg" "preview_file" .Params.title_preview_image) }}
             </div>
             <h5 class="post-title">{{ .Params.title }}</h5>
             <div class="post-about">
@@ -41,7 +40,7 @@
       <div class="qdrant-blog-features__articles-secondary">
         {{ range first 3 (after 1 (where $all ".Params.featured" "=" true)) }}
           <article class="post">
-            <a class="post-link" href="/">
+            <a class="post-link" href="{{ .RelPermalink }}">
               <h6 class="post-title">{{ .Params.title }}</h6>
               <div class="post-about">
                 <p>{{ .Params.author }}</p>
