--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-hero.html
@@ -4,17 +4,9 @@
       <h1 class="qdrant-blog-hero__title col-12 col-xl-6">{{ .Params.title }}</h1>
       <div class="qdrant-blog-hero__content col-12 col-xl-6">
         <p class="qdrant-blog-hero__description">{{ .Params.description }}</p>
-        <form class="qdrant-blog-hero__form">
-          <input
-            class="input input_lg input_dark-bg"
-            type="email"
-            name="email"
-            value=""
-            placeholder="{{ .Params.email_placeholder }}"
-            required=""
-          />
-          <button class="button button_contained button_lg" type="submit">{{ .Params.subscribe_button }}</button>
-        </form>
+        {{ with (.Site.GetPage "/headless/newsletter") }}
+          {{ partial "hubspot-form.html" (dict "hubspotFormOptions" .Params.hubspotFormOptions "id" "blog-subscribe-form" "context" . "classes" "qdrant-blog-hero__form") }}
+        {{ end }}
       </div>
     </div>
   </div>
