inline code highlight only inside article tag

--- a/qdrant-landing/themes/qdrant-2024/assets/css/syntax-highlight.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/syntax-highlight.scss
@@ -1,5 +1,5 @@
 /* inline code */
-code:not([class]) {
+article code:not([class]) {
   color: $neutral-20;
   background-color: $secondary-blue-90;
   padding: 0.2em 0.4em;
