demos and tutorials links and fixes

--- a/qdrant-landing/themes/qdrant-2024/assets/css/_theme-variables.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_theme-variables.scss
@@ -170,4 +170,15 @@ $gutters: (
   6: $spacer * 4,
 );
 
+$spacers: (
+        0: 0,
+        1: $spacer * .25,
+        2: $spacer * .5,
+        3: $spacer,
+        4: $spacer * 1.5,
+        5: $spacer * 3,
+        6: $spacer * 5,
+        7: $spacer * 7.5,
+);
+
 $code-snippet-border-radius: $border-radius * 2;
