--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_retrieval-augmented-generation-evaluation.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_retrieval-augmented-generation-evaluation.scss
@@ -36,7 +36,7 @@
     &-logos {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: start;
       gap: $spacer * 1.5 $spacer * 0.5;
     }
 
@@ -46,7 +46,14 @@
     }
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
+    &-logos {
+      flex-wrap: nowrap;
+      justify-content: space-between;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 6.5;
     padding-bottom: $spacer * 6.5;
 
