--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/data-analysis-anomaly-detection.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/data-analysis-anomaly-detection.html
@@ -1,12 +1,12 @@
 {{ with (.Site.GetPage "/data-analysis/data-analysis-anomaly-detection") }}
   <section class="data-analysis-anomaly-detection">
     <div class="container">
-      <div class="data-analysis-anomaly-detection__content row align-items-xl-center">
-        <div class="col-12 col-xl-5">
+      <div class="data-analysis-anomaly-detection__content row align-items-lg-center">
+        <div class="col-12 col-lg-5">
           <h3 class="data-analysis-anomaly-detection__title">{{ .Params.title }}</h3>
           <p class="data-analysis-anomaly-detection__description">{{ .Params.description }}</p>
         </div>
-        <div class="col-12 offset-xl-1 col-xl-6">
+        <div class="col-12 offset-lg-1 col-lg-6">
           <img
             class="data-analysis-anomaly-detection__preview"
             src="{{ .Params.image.src }}"
