--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
@@ -1,14 +1,14 @@
 <section class="{{ .class }}">
   <div class="container">
     <div class="{{ .class }}__content">
-      <div class="row justify-content-xl-between align-items-xl-center">
-        <div class="{{ .class }}__text col-12 col-xl-7">
+      <div class="row justify-content-md-between align-items-md-center">
+        <div class="{{ .class }}__text col-12 col-md-7">
           <h3 class="{{ .class }}__title">{{ .context.Params.title }}</h3>
           <a href="{{ .context.Params.button.url }}" class="button button_contained" target="_blank">
             {{ .context.Params.button.text }}
           </a>
         </div>
-        <div class="{{ .class }}__image col-12 col-xl-4">
+        <div class="{{ .class }}__image col-12 col-md-4">
           <img src="{{ .context.Params.image.src }}" alt="{{ .Params.image.alt }}" />
         </div>
       </div>
