--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/retrieval-augmented-generation-integrations.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/retrieval-augmented-generation-integrations.html
@@ -2,9 +2,9 @@
   <section class="retrieval-augmented-generation-integrations">
     <div class="container">
       <h4 class="retrieval-augmented-generation-integrations__title">{{ .Params.title }}</h4>
-      <div class="row g-4 g-xl-5">
+      <div class="row g-4 g-lg-5">
         {{ range .Params.integrations }}
-          <div class="col-12 col-xl-4">
+          <div class="col-12 col-md-6 col-xl-4">
             <div class="retrieval-augmented-generation-integrations__card">
               <img
                 class="retrieval-augmented-generation-integrations__card-icon"
