--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/use-cases-vector-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/use-cases-vector-hero.html
@@ -1,7 +1,7 @@
 <section class="use-cases-vector-hero">
   <div class="container">
-    <div class="row align-items-xl-center">
-      <div class="use-cases-vector-hero__content col-12 col-xl-6">
+    <div class="row align-items-lg-center">
+      <div class="use-cases-vector-hero__content col-12 col-lg-6">
         <h1 class="use-cases-vector-hero__title">{{ .Params.title }}</h1>
         <p class="use-cases-vector-hero__description">{{ .Params.description }}</p>
         <div class="use-cases-vector-hero__buttons">
@@ -14,7 +14,7 @@
         </div>
       </div>
 
-      <div class="use-cases-vector-hero__preview col-12 col-xl-6">
+      <div class="use-cases-vector-hero__preview col-12 col-lg-6">
         <img src="{{ .Params.image.src }}" alt="{{ .Params.image.alt }}" />
       </div>
     </div>
