--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started.scss
@@ -96,7 +96,7 @@
     display: none;
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(md) {
     padding-top: $spacer * 6.5;
     padding-bottom: $spacer * 6.5;
 
