--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_use-cases-vector-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_use-cases-vector-hero.scss
@@ -44,7 +44,7 @@
     }
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 5;
     padding-bottom: $spacer * 10;
     text-align: left;
@@ -73,10 +73,12 @@
         min-width: auto;
       }
     }
-
-    &__preview {
-      height: rem(360);
-      padding-bottom: 0;
-    }
   }
+
+@include media-breakpoint-up(lg) {
+  &__preview {
+    height: rem(360);
+    padding-bottom: 0;
+  }
+}
 }
