--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/retrieval-augmented-generation-evaluation.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/retrieval-augmented-generation-evaluation.html
@@ -2,12 +2,12 @@
   <section class="retrieval-augmented-generation-evaluation">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-xl-6">
+        <div class="col-12 col-md-6">
           <h3 class="retrieval-augmented-generation-evaluation__title">{{ .Params.title }}</h3>
           <p class="retrieval-augmented-generation-evaluation__description">{{ .Params.descriptionFirstPart }}</p>
           <p class="retrieval-augmented-generation-evaluation__description">{{ .Params.descriptionSecondPart }}</p>
         </div>
-        <div class="col-12 col-xl-6">
+        <div class="col-12 col-md-6">
           <img
             class="retrieval-augmented-generation-evaluation__image"
             src="{{ .Params.image.src }}"
@@ -17,10 +17,10 @@
       </div>
 
       <div class="retrieval-augmented-generation-evaluation__partners row">
-        <div class="col-12 col-xl-6">
+        <div class="col-12 col-md-6">
           <h6 class="retrieval-augmented-generation-evaluation__partners-title">{{ .Params.partnersTitle }}</h6>
         </div>
-        <div class="retrieval-augmented-generation-evaluation__partners-logos col-12 col-xl-6">
+        <div class="retrieval-augmented-generation-evaluation__partners-logos col-12 col-lg-6">
           {{ range .Params.logos }}
             <img
               class="retrieval-augmented-generation-evaluation__partners-logo"
