--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/use-cases-vector-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/use-cases-vector-cases.html
@@ -3,7 +3,7 @@
     <h3 class="use-cases-vector-cases__title">{{ .Params.title }}</h3>
     <div class="use-cases-vector-cases__cards row g-4">
       {{ range .Params.features }}
-        <div class="col-12 col-xl-6">
+        <div class="col-12 col-md-6">
           <div class="card use-cases-vector-cases__card">
             <img class="use-cases-vector-cases__card-image" src="{{ .image.src }}" alt="{{ .image.alt }}" />
             <img
