--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/benchmark_chart.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/benchmark_chart.html
@@ -1,51 +1,80 @@
 <div class="benchmark-wrapper" id="benchmark-plot-wrapper-{{ .Params.id }}">
   <label for="datasets-selector-{{ .Params.id }}">Dataset:</label>
-  <select name="datasets" id="datasets-selector-{{ .Params.id }}" onchange="renderSelected('{{ .Params.id }}')">
-
-  </select>
+  <select
+    name="datasets"
+    id="datasets-selector-{{ .Params.id }}"
+    onchange="renderSelected('{{ .Params.id }}')"
+  ></select>
 
   <label for="parallel-selector-{{ .Params.id }}">Search threads:</label>
-  <select disabled name="parallel" id="parallel-selector-{{ .Params.id }}" onchange="renderSelected('{{ .Params.id }}')">
-  </select>
+  <select
+    disabled
+    name="parallel"
+    id="parallel-selector-{{ .Params.id }}"
+    onchange="renderSelected('{{ .Params.id }}')"
+  ></select>
 
   Plot values:
 
   <!-- Radio button group to select values to render -->
   <label>
-    <input type="radio" name="plot-value-{{ .Params.id }}" value="rps" onclick="document.getElementById('parallel-selector-{{ .Params.id }}').value = 100; renderSelected('{{ .Params.id }}', this.value)"/>
+    <input
+      type="radio"
+      name="plot-value-{{ .Params.id }}"
+      value="rps"
+      onclick="document.getElementById('parallel-selector-{{ .Params.id }}').value = 100; renderSelected('{{ .Params.id }}', this.value)"
+    />
     RPS
-  </label> |
+  </label>
+  |
 
   <label>
-    <input type="radio" name="plot-value-{{ .Params.id }}" value="mean_time"  onclick="document.getElementById('parallel-selector-{{ .Params.id }}').value = 1; renderSelected('{{ .Params.id }}', this.value)"/>
+    <input
+      type="radio"
+      name="plot-value-{{ .Params.id }}"
+      value="mean_time"
+      onclick="document.getElementById('parallel-selector-{{ .Params.id }}').value = 1; renderSelected('{{ .Params.id }}', this.value)"
+    />
     Latency
-  </label> |
+  </label>
+  |
 
   <label>
-    <input type="radio" name="plot-value-{{ .Params.id }}" value="p95_time"  onclick="document.getElementById('parallel-selector-{{ .Params.id }}').value = 1; renderSelected('{{ .Params.id }}', this.value)"/>
+    <input
+      type="radio"
+      name="plot-value-{{ .Params.id }}"
+      value="p95_time"
+      onclick="document.getElementById('parallel-selector-{{ .Params.id }}').value = 1; renderSelected('{{ .Params.id }}', this.value)"
+    />
     p95 latency
-  </label> |
+  </label>
+  |
 
   <label>
-    <input type="radio" name="plot-value-{{ .Params.id }}" value="total_upload_time"  onclick="document.getElementById('parallel-selector-{{ .Params.id }}').value = 100; renderSelected('{{ .Params.id }}', this.value)"/>
+    <input
+      type="radio"
+      name="plot-value-{{ .Params.id }}"
+      value="total_upload_time"
+      onclick="document.getElementById('parallel-selector-{{ .Params.id }}').value = 100; renderSelected('{{ .Params.id }}', this.value)"
+    />
     Index time
   </label>
-
 
   <canvas id="chart-{{ .Params.id }}"></canvas>
 
   <div class="form-group" style="margin-left: 5%; margin-right: 1%;">
-    <input type="range" class="custom-range" id="precision-selector-{{ .Params.id }}" onchange="updateLine('{{ .Params.id }}', this.value)">
+    <input
+      type="range"
+      class="custom-range"
+      id="precision-selector-{{ .Params.id }}"
+      onchange="updateLine('{{ .Params.id }}', this.value)"
+    />
   </div>
 
   <div id="table-{{ .Params.id }}"></div>
 
   <i> Download raw data: <a href="{{ .Params.data }}">here</a> </i>
-
 </div>
-
-
-
 
 <!--<script type="module" src="/benchmark.js"></script>-->
 <script type="module">
