links, small fixes

--- a/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
@@ -9,5 +9,6 @@
 @import 'partials/menu-mobile';
 @import 'partials/menu';
 @import 'partials/link';
+@import 'partials/hubspot-form';
 @import 'partials/footer';
 @import 'cookit';
