--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
@@ -40,28 +40,6 @@
     padding-bottom: $spacer * 3;
   }
 
-  &__social {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-
-    &-title {
-      font-size: rem(18);
-      line-height: rem(27);
-      font-weight: bold;
-      margin-bottom: 0;
-      padding-bottom: $spacer * 0.5;
-      border-bottom: rem(1) solid $primary-50;
-    }
-
-    &-links {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      gap: $spacer * 2;
-    }
-  }
-
   &__content {
     p,
     li {
@@ -105,6 +83,14 @@
     }
   }
 
+  // Modifiers
+  &_centered {
+    .qdrant-post__body {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
   @include media-breakpoint-up(xl) {
     &__header {
       width: rem(920);
@@ -123,20 +109,6 @@
       gap: $spacer * 5;
       width: rem(920);
       margin: 0 auto;
-    }
-
-    &__social {
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      gap: $spacer * 1.5;
-      width: $spacer * 5;
-      padding-left: $spacer * 2;
-
-      &-links {
-        flex-direction: column;
-        justify-content: flex-start;
-      }
     }
 
     &__content {
