--- a/qdrant-landing/themes/qdrant-2024/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/articles/single.html
@@ -5,7 +5,7 @@
     {{ partial "menu-mobile" . }}
   </header>
 
-  {{ partial "qdrant-post" . }}
+  {{ partial "qdrant-post" (dict "context" . "variant" "centered") }}
 
   {{ with (.Site.GetPage "/headless/get-started-blogs") }}
     {{ partial "get-started-small" (dict "context" . "class" "get-started-blogs") }}
